--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
     "image-webpack-loader": "^3.3.1",
